[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/clear.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/startbtn.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="background" parent="." instance=ExtResource( 1 )]

[node name="paint" type="Node" parent="."]

[node name="clear" parent="." instance=ExtResource( 3 )]

[node name="TextureButton" parent="." instance=ExtResource( 4 )]
margin_left = 22.0
margin_top = 103.0
margin_right = 122.0
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
